--- a/21:36 26-02-2017.md
+++ b/21:36 26-02-2017.md
@@ -1,8 +1,8 @@
 ---
 layout: 
 title:  Шаблон файла
-categories: Программирование
+tegs: Программирование
 ---
-Файл должен содержать данные в формате указанном выше.
+Файл должен содержать данные в формате: title: sometext, tegs: sometext, layout: sometext.
 Название файла должно состоять из `H:M DD-MM-YYYY.ext`
 Затем текст блога.
