--- a/12:22 25-02-2017.md
+++ b/12:22 25-02-2017.md
@@ -1,2 +1,6 @@
-#New file for blog
-Text, bla la aa, text, bla, bla
+---
+title: Анекдот
+tegs: Юмор
+layout:
+---
+Людям физического труда для восстановления своих сил нужен 7-8 часовой ночной сон. Людям умственного труда нужно спать часов 9-10. Ну а программистов будить нельзя вообще.
